fixing long word to wrap before breaking layout

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -125,6 +125,13 @@ h6 {
 	clear: both;
 }
 
+.post
+{
+	-ms-word-break: break-all;
+	word-break: break-all;
+	word-break: break-word;
+}
+
 @media screen and (max-width: @screen-xs-max) {
 	.post-cover-image {
 	}
